@@ -18,4 +18,11 @@ $Id$
 """
 __docformat__ = 'restructuredtext'
 
-from zope.security.metaconfigure import ClassDirective
+import zope.deferredimport
+
+zope.deferredimport.deprecated(
+    "The ``class`` directive implementation was moved to "
+    "zope.security.metaconfigure. This import will stop "
+    "working in Zope 3.6",
+    ClassDirective = 'zope.security.metaconfigure:ClassDirective'
+    )
